# labs_parcomp

./: CMakeLists.txt
include/parlib/: perf_clock.hpp  perf_timeduration.hpp  perf_timepoint.hpp
src/lab1/: CMakeLists.txt  integrator.hpp  lab1.cpp
src/lab2/: CMakeLists.txt  common.hpp  lab2.cpp  server.cpp  server.hpp
src/parlib/: CMakeLists.txt
src/parlib/platform/: impl_posix_perfclock.cpp  impl_win32_perfclock.cpp
